--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.company.freightroutingnn/com.company.freightroutingnn.HelloApplication
+                            <mainClass>com.company.freightroutingnn/com.company.freightroutingnn.Login
                             </mainClass>
                         </configuration>
                     </execution>
